--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ tonic = "0.11.0"
 prost = "0.12.3"
 aws-sdk-dynamodb = "1.20.0"
 aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
+rand = "0.8.5"
 
 [build-dependencies]
 tonic-build = "0.11.0"
